Trying to resolve merge conflict in VerticalMatch.java...